syntax = "proto3";

option csharp_namespace = "grpcServer";

package unary;

service Unary {
  rpc Add (UnaryRequest) returns (UnaryReply);
  rpc Sub (UnaryRequest) returns (UnaryReply);
}

message UnaryRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message UnaryReply {
  int32 result = 1;
}
